Hide highlight when tapping

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
           scroll-snap-align: start;
           position: relative;
           mix-blend-mode: difference;
+          -webkit-tap-highlight-color: transparent;
         }
 
         .mobile-tab::after {
