--- a/index.html
+++ b/index.html
@@ -124,6 +124,43 @@
         padding: 0;
         position: sticky;
         top: 0;
+        background-color: #f9f9f9;
+      }
+
+      /* Loading placeholder - only show when canvas doesn't exist */
+      #chartContainer:empty::before {
+        content: "Loading...";
+        display: block;
+        width: 1000px;
+        aspect-ratio: 1;
+        max-width: min(100%, 95vh);
+        max-height: 95vh;
+        font-family: "IBM Plex Serif", sans-serif;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        animation: fadeOut 0.5s ease-out forwards;
+      }
+
+      /* Fade out animation for placeholder */
+      @keyframes fadeOut {
+        0% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
+      }
+
+      /* Fade in animation for canvas */
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
       }
 
       #chartContainer canvas {
@@ -134,6 +171,7 @@
         height: auto !important;
         display: block;
         object-fit: contain;
+        animation: fadeIn 0.6s ease-out;
       }
 
       /* Responsive layout for smaller screens */
@@ -151,6 +189,14 @@
           max-height: 70vh;
           border: none;
           z-index: 100;
+        }
+
+        /* Adjust loading placeholder for mobile */
+        #chartContainer:empty::before {
+          max-width: 100vw;
+          max-height: 100vh;
+          background-color: #fffceb;
+          animation: fadeOut 0.5s ease-out;
         }
 
         #chartContainer canvas {
