--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
       @media (max-width: 800px) {
         body {
-          padding-bottom: 20px;
+          padding: 0;
           justify-content: flex-start;
         }
 
@@ -334,8 +334,13 @@
           display: none;
         }
 
+        #chartContainer {
+          max-height: 200vh;
+        }
+
         .controls {
           padding-bottom: 20px;
+          margin-bottom: 0;
           overflow-y: visible;
           min-height: auto;
           position: relative;
@@ -414,7 +419,6 @@
           font-family: "IBM Plex Serif", sans-serif;
           font-size: 1.5em;
           font-weight: normal;
-          color: #999;
           transition: color 0.2s;
           scroll-snap-align: start;
           position: relative;
