--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
         font-size: 16px;
       }
 
+      input {
+        padding-left: 10px;
+      }
+
       .footer {
         margin-top: auto;
         padding: 40px 0px 10px 0px;
@@ -424,6 +428,7 @@
           position: relative;
           mix-blend-mode: difference;
           -webkit-tap-highlight-color: transparent;
+          transition: opacity 220ms ease;
         }
 
         .mobile-tab::after {
